syntax = "proto3";

package auth;

option go_package = "./";

service TokenService {
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {}
}


message GetTokenRequest {
  int64 user_id = 1;
}

message GetTokenResponse {
  string token = 1;
}